--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <body>
     <h1>JavaScript Café</h1>
     <div class="container"></div>
+    <p id="whiteCoffee"></p>
+    <p id="blackCoffee"></p>
+    <p id="muffin"></p>  
+    <p id="eggs"></p>
     <script src="cafe.js"></script>
   </body>
 </html>
